Added new Traffic Alerts routes and UI components

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -189,9 +189,9 @@
         <a id="side-menu-sub-item__security-settings" ui-sref-active="active" ui-sref="index.accountSettings.2fa" class="side-menu-sub-item" href="#/2fa">
             <i class="sub-menu-icon fa fa-lock"></i> Security Settings
           </a>
-        <!-- <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="userService.isRevadmin()">
+        <a ui-sref-active="active" ui-sref="index.accountSettings.notificationsList" class="side-menu-sub-item" id="side-menu-sub-item__notifications-list" ng-if="userService.isRevadmin()">
             <i class="sub-menu-icon fa fa-server "></i>  Notification Lists
-          </a> -->
+          </a>
         <a ui-sref-active="active" ui-sref="index.accountSettings.trafficAlerts" class="side-menu-sub-item" id="side-menu-sub-item__traffic-alerts-list" ng-if="userService.isRevadmin()">
             <i class="sub-menu-icon fa fa-server "></i>  Trafic Alerts
           </a>
