Changes in UI and new silence/unsilence feature for traffic alerts

--- a/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
+++ b/code/dev/parts/trafficAlerts/directives/alertRuleTypeConfigs.html
@@ -6,8 +6,8 @@
         <div class="panel-body">
             <div class="form-group" ng-class="{ 'has-error': editForm.spikeDirection.$invalid && editForm.spikeDirection.$dirty }">
                 <label for="spikeDirection" class="col-sm-2 control-label">Spike Direction *</label>
-                <div class="col-sm-10">
-                    <select class="form-control inline-block" id="destination_type" name="spikeDirection" ng-model="model.rule_config.spike_direction"
+                <div class="col-sm-4">
+                    <select class="form-control inline-block half-width" id="destination_type" name="spikeDirection" ng-model="model.rule_config.spike_direction"
                         ng-disabled="_loading" ng-options="item.key for item in spikeDirections track by item.value" required>
                         <option value="">--- Select Spike Direction ---</option>
                     </select>
@@ -19,13 +19,14 @@
                     </div>
                 </div>
             </div>
-            <!-- Destination Host -->
             <div class="form-group" ng-class="{ 'has-error': editForm.spikeAmount.$invalid && editForm.spikeAmount.$dirty }">
                 <label for="spikeAmount" class="col-sm-2 control-label">Spike Amount *</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control inline-block" id="Host" name="spikeAmount" placeholder="Spike Amount" ng-model="model.rule_config.spike_amount"
-                        ng-maxlength="150" ng-minlength="1" ng-disabled="_loading" required>
-                    <label for="spikeAmount" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Host name for FTP, SFTP and ElasticSearch destinations, S3 bucket name for S3 destination">
+                <div class="col-sm-4">
+                    <input type="number" class="form-control inline-block half-width" id="Host" name="spikeAmount" placeholder="Spike Amount"
+                        ng-model="model.rule_config.spike_amount" ng-maxlength="150" ng-minlength="1" ng-disabled="_loading"
+                        required>
+                    <label for="spikeAmount" class="text text-info inline-block" popover-append-to-body="{{true}}" popover-trigger="mouseenter"
+                        uib-popover="Host name for FTP, SFTP and ElasticSearch destinations, S3 bucket name for S3 destination">
                         <i class="fa fa-question-circle"></i>
                     </label>
                     <div class="error-messages" ng-messages="editForm.spikeAmount.$error" role="alert" ng-messages-multiple>
@@ -35,27 +36,28 @@
             </div>
             <div class="form-group" ng-class="{'has-error': editForm.timeframe.$invalid && editForm.timeframe.$dirty }">
                 <label for="timeframe" class="col-sm-2 control-label">Timeframe *</label>
-                <div class="col-sm-10">
-                    <div class="col-sm-2 no-padding">
+                <div class="col-sm-6">
+                    <div class="col-sm-4 no-padding" style="padding-right: 15px;">
                         <input type="text" class="form-control" id="destination_port" name="timeframe" placeholder="Timeframe" ng-model="model.rule_config.timeframe"
                             ng-disabled="_loading">
                     </div>
                     &nbsp;
-                    <div class="col-sm-2 no-padding">
-                        <select class="form-control" id="timeframe_type" name="timeframe_type" ng-model="model.rule_config.timeframe_type" ng-disabled="_loading"
-                            required>
-                            <option ng-selected="true" value="seconds">Seconds</option>
+                    <div class="col-sm-4" style="padding-right: 5px; margin-right: 0;">
+                        <select class="form-control" ng-init="model.rule_config.timeframe_type = model.rule_config.timeframe_type || 'minutes'" id="timeframe_type"
+                            name="timeframe_type" ng-model="model.rule_config.timeframe_type" ng-disabled="_loading" required>
                             <option value="minutes">Minutes</option>
                             <option value="hours">Hours</option>
                             <option value="days">Days</option>
                         </select>
                     </div>
 
-                    <label for="timeframe" class="text text-info" popover-trigger="mouseenter" uib-popover="Set the timeframe for the rule to check traffic spikes.">
-                        <i class="fa fa-question-circle"></i>
-                    </label>
-                    <div class="error-messages" ng-messages="editForm.timeframe.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                    <div class="col-sm-2 no-padding">
+                        <label for="timeframe" class="text text-info" popover-trigger="mouseenter" uib-popover="Set the timeframe for the rule to check traffic spikes.">
+                            <i class="fa fa-question-circle"></i>
+                        </label>
+                        <div class="error-messages" ng-messages="editForm.timeframe.$error" role="alert" ng-messages-multiple>
+                            <div ng-messages-include="parts/shared/error-messages.html"></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -65,8 +67,8 @@
         <div class="panel-body">
             <div class="form-group" ng-class="{ 'has-error': editForm.status_code.$invalid && editForm.status_code.$dirty }">
                 <label for="spikeAmount" class="col-sm-2 control-label">Status Code *</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control inline-block" id="Host" placeholder="500" name="status_code" ng-model="model.rule_config.status_code"
+                <div class="col-sm-4">
+                    <input type="number" class="form-control half-width inline-block" id="Host" placeholder="500" name="status_code" ng-model="model.rule_config.status_code"
                         ng-maxlength="3" ng-minlength="1" ng-disabled="_loading" required>
                     <label for="spikeAmount" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The status code that will trigger the alert">
                         <i class="fa fa-question-circle"></i>
@@ -78,8 +80,8 @@
             </div>
             <div class="form-group" ng-class="{ 'has-error': editForm.responses.$invalid && editForm.responses.$dirty }">
                 <label for="spikeAmount" class="col-sm-2 control-label">Number Of Responses *</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control inline-block" id="Host" placeholder="1" name="responses" ng-model="model.rule_config.responses"
+                <div class="col-sm-4">
+                    <input type="number" class="form-control inline-block half-width" id="Host" placeholder="1" name="responses" ng-model="model.rule_config.responses"
                         ng-maxlength="3" ng-minlength="1" ng-disabled="_loading" required>
                     <label for="spikeAmount" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The amount of responses with the configured status code that will trigger the alert">
                         <i class="fa fa-question-circle"></i>
@@ -91,27 +93,28 @@
             </div>
             <div class="form-group" ng-class="{'has-error': editForm.timeframe.$invalid && editForm.timeframe.$dirty }">
                 <label for="timeframe" class="col-sm-2 control-label">Timeframe *</label>
-                <div class="col-sm-10">
-                    <div class="col-sm-2 no-padding">
+                <div class="col-sm-6">
+                    <div class="col-sm-4 no-padding" style="padding-right: 15px;">
                         <input type="text" class="form-control" id="destination_port" name="timeframe" placeholder="Timeframe" ng-model="model.rule_config.timeframe"
                             ng-disabled="_loading">
                     </div>
                     &nbsp;
-                    <div class="col-sm-2 no-padding">
-                        <select class="form-control" id="timeframe_type" name="timeframe_type" ng-model="model.rule_config.timeframe_type" ng-disabled="_loading"
-                            required>
-                            <option ng-selected="true" value="seconds">Seconds</option>
+                    <div class="col-sm-4" style="padding-right: 5px; margin-right: 0;">
+                        <select class="form-control" ng-init="model.rule_config.timeframe_type = model.rule_config.timeframe_type || 'minutes'" id="timeframe_type"
+                            name="timeframe_type" ng-model="model.rule_config.timeframe_type" ng-disabled="_loading" required>
                             <option value="minutes">Minutes</option>
                             <option value="hours">Hours</option>
                             <option value="days">Days</option>
                         </select>
                     </div>
 
-                    <label for="timeframe" class="text text-info" popover-trigger="mouseenter" uib-popover="Set the timeframe for the rule to check response status codes.">
-                        <i class="fa fa-question-circle"></i>
-                    </label>
-                    <div class="error-messages" ng-messages="editForm.timeframe.$error" role="alert" ng-messages-multiple>
-                        <div ng-messages-include="parts/shared/error-messages.html"></div>
+                    <div class="col-sm-2 no-padding">
+                        <label for="timeframe" class="text text-info" popover-trigger="mouseenter" uib-popover="Set the timeframe for the rule to check traffic spikes.">
+                            <i class="fa fa-question-circle"></i>
+                        </label>
+                        <div class="error-messages" ng-messages="editForm.timeframe.$error" role="alert" ng-messages-multiple>
+                            <div ng-messages-include="parts/shared/error-messages.html"></div>
+                        </div>
                     </div>
                 </div>
             </div>
